# hstaxe

./: .gitignore  .readthedocs.yml  CHANGES.rst  LICENSE.txt  README.md  README.rst  conda_environment.yml  hatch_build.py  pyproject.toml  setup.cfg  setup.py
cextern/: CHANGES.md  Makefile.am  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac  libtool.bak
cextern/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.3
cextern/src/: Makefile  Makefile.am  Makefile.in  aXe_AF2PET.c  aXe_BE.c  aXe_CHECK.c  aXe_DIRIMAGE.c  aXe_DRZ2PET.c  aXe_DRZPREP.c  aXe_FILET.c  aXe_FILET2.c  aXe_FRIGEN.c  aXe_FRINGECORR.c  aXe_GOL2AF.c  aXe_GPS.c  aXe_INTPIXCORR.c  aXe_NICBACK.c  aXe_PET2SPC.c  aXe_PETCONT.c  aXe_PETFF.c  aXe_PETIPC.c  aXe_SCALEBCK.c  aXe_SEX2GOL.c  aXe_STAMPS.c  aXe_TEST.c  aXe_TFIT.c  aXe_errors.c  aXe_errors.h  aXe_grism.h  aXe_utils.c  aXe_utils.h  aper_check.c  aper_check.h  aper_conf.c  aper_conf.h  crossdisp_utils.c  crossdisp_utils.h  dirimage_model.c  dirimage_model.h  disp_conf.c  (+82 more)
cextern/src/.deps/: aXe_AF2PET.Po  aXe_BE.Po  aXe_DIRIMAGE.Po  aXe_DRZ2PET.Po  aXe_DRZPREP.Po  aXe_FILET.Po  aXe_FRIGEN.Po  aXe_FRINGECORR.Po  aXe_GOL2AF.Po  aXe_GPS.Po  aXe_INTPIXCORR.Po  aXe_NICBACK.Po  aXe_PET2SPC.Po  aXe_PETCONT.Po  aXe_PETFF.Po  aXe_PETIPC.Po  aXe_SCALEBCK.Po  aXe_SEX2GOL.Po  aXe_STAMPS.Po  aXe_TEST.Po  aXe_TFIT.Po  aXe_errors.Po  aXe_utils.Po  aper_check.Po  aper_conf.Po  crossdisp_utils.Po  dirimage_model.Po  disp_conf.Po  drizzle_utils.Po  drz2pet_utils.Po  fringe_conf.Po  fringe_model.Po  fringe_utils.Po  inima_utils.Po  inout_aper.Po  ipixcorr_utils.Po  lm_eval.Po  lmmin.Po  model_utils.Po  nicback_utils.Po  (+27 more)
cookbooks/: cookbook_env.yml  wfc3-basic-ir-hstaxe-cookbook.ipynb
cookbooks/ACS/: acs_hstaxe_basic.ipynb
cookbooks/ACS/SBC_basic_extraction/: README.md  acs_sbc_hstaxe.html  acs_sbc_hstaxe.ipynb
cookbooks/ACS/WFC_basic_fullframe_extraction/: README.md  acs_basic_fullframe_hstaxe_cookbook.html  acs_basic_fullframe_hstaxe_cookbook.ipynb
cookbooks/ACS/WFC_basic_subarray_extraction/: README.md  acs_basic_subarray_hstaxe_cookbook.html  acs_basic_subarray_hstaxe_cookbook.ipynb
cookbooks/WFC3/: README.md
cookbooks/WFC3/IR_basic_extraction/: wfc3-basic-ir-hstaxe-cookbook.html  wfc3-basic-ir-hstaxe-cookbook.ipynb
cookbooks/WFC3/IR_extraction/: README.md  wfc3-ir-hstaxe-cookbook.html  wfc3-ir-hstaxe-cookbook.ipynb
cookbooks/WFC3/UVIS_fullframe_basic_extraction/: README.md  wfc3-basic-uvis-fullframe-hstaxe-cookbook.html  wfc3-basic-uvis-fullframe-hstaxe-cookbook.ipynb
cookbooks/WFC3/UVIS_subarray_basic_extraction/: README.md  wfc3-basic-uvis-subarray-hstaxe-cookbook.html  wfc3-basic-uvis-subarray-hstaxe-cookbook.ipynb
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/hstaxe/: Bibliography.tex  appendix.rst  axe_tasks.rst  bibliography.rst  calibration_files.rst  configuration_files.rst  description.rst  examples.rst  file_formats.rst  installing.rst  support.rst  using_axe.rst
docs/hstaxe/images/: do  j8m820leq_cont.psd
hstaxe/: __init__.py  axeException.py  axeerror.py  config.py  utils.py
hstaxe/axesim/: WCSdata.py  __init__.py  axesim_verify.py  axesimtasks.py  imagemaker.py  interpolator.py  modspeclist.py  realworld.py  templateimages.py  templatespectra.py
hstaxe/axesrc/: __init__.py  axecommands.py  axeinputs.py  axeiol.py  axelowlev.py  axepreptor.py  axesingextr.py  axetasks.py  configfile.py  dither.py  dppdumps.py  drizzleobjects.py  fcubeobjs.py  imagemaker.py  inputchecks.py  iolmaking.py  mefobjects.py  nlincoeffs.py  pysex2gol.py
hstaxe/tests/: aXe.lis  aXe_acs.lis  coveragerc  run_acs_cookbook.py  run_cookbook.py  run_cookbook_part2.py  test_af2pet.py  test_axecore.py  test_axeprep.py  test_gol2af.py  test_iolprep.py  test_pet2spc.py  test_petcont.py  test_petff.py  test_scalebck.py  test_sex2gol.py  test_stamps.py
jupyter_notebooks/: IRAF-Replaced-Tasks-aXe.ipynb
jupyter_notebooks/.ipynb_checkpoints/: CALWF3_Error_Array_Treatment-checkpoint.ipynb  IRAF-Replaced-Tasks-aXe-checkpoint.ipynb
legacy_notebooks/: README.md  aXe_WFC3_Cookbook-example.html  aXe_WFC3_Cookbook.ipynb  hstaxe_wfc3_mos_workshop.ipynb
pyaxe/: __init__.py  axeerror.py  axeutils.py  config.py  iolprep.py  utilities.py  utils.py  version.py
pyaxe/axe_asciidata/: __init__.py  asciicolumn.py  asciidata.py  asciidata_SExtest.py  asciidata_numtest.py  asciidata_test.py  asciielement.py  asciierror.py  asciifits.py  asciifunction.py  asciiheader.py  asciisorter.py  asciiutils.py
pyaxe/axesim/: WCSdata.py  __init__.py  axesimtasks.py  imagemaker.py  interpolator.py  modspeclist.py  templateimages.py
pyaxe/axesrc/: awtran.py  axe_verify.py  axecommands.py  axeinputs.py  axeiol.py  axelowlev.py  axepreptor.py  axesingextr.py  axetasks.py  compileaXe.py  configfile.py  dither.py  dppdumps.py  drizzleobjects.py  fcubeobjs.py  imagemaker.py  inputchecks.py  interpolator.py  iolmaking.py  mdrzobjects.py  mefobjects.py  modspeclist.py  nlincoeffs.py  pysex2gol.py  templateimages.py  templatespectra.py
pyaxe/iraf/: af2pet.py  axecore.py  axedrizzle_iraf.py  axegps_iraf.py  axeprep_iraf.py  backest_iraf.py  drz2pet_iraf.py  drzprep_iraf.py  fcubeprep_iraf.py  gol2af_iraf.py  iolprep_iraf.py  pet2spc_iraf.py  petcont_iraf.py  petff_iraf.py  prepimages_iraf.py  prepspectra_iraf.py  sex2gol_iraf.py  simdata_iraf.py  simdirim_iraf.py  simdispim_iraf.py  stamps_iraf.py
pyaxe/pars/: README  af2pet.par  axecore.par  axedrizzle.par  axegps.par  axeprep.par  backest.par  drz2pet.par  drzprep.par  fcubeprep.par  gol2af.par  iolprep.cfg  iolprep.cfgspc  iolprep.par  pet2spc.par  petcont.par  petff.par  prepimages.par  prepspectra.par  pyaxe.cfg  pyaxe.cfgspc  sex2gol.par  simdata.par  simdirim.par  simdispim.par  stamps.par
pyaxe/tests/: run_acs_cookbook.py  run_cookbook.py  run_cookbook_part2.py  test_af2pet.py  test_axecore.py  test_axeprep.py  test_be.py  test_gol2af.py  test_iolprep.py  test_pet2spc.py  test_petcont.py  test_petff.py  test_scalebck.py  test_sex2gol.py  test_stamps.py
