[metadata]
package_name = hstaxe
description = Spectral extraction tools for Hubble Space Telescope Grisms
long_description = aXe spectral extraction for HST
author = STScI
author_email = https://hsthelp.stsci.edu
license = 3-Clause BSD
url = http://axe-info.stsci.edu/
edit_on_github = False
github_project = spacetelescope/hstaxe

classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.6,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: Implementation :: CPython,
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires >=3.7
setup_requires = 
    setuptools_scm
    setuptools >= 30.3.0
packages =
    hstaxe
install_requires =
    numpy>=1.17
    astropy>=4
    cfitsio>=3.4
    gsl
    stwcs
    stsci.imagestats
    drizzlepac
    drizzle
    wcstools
tests_require =
    backports.tempfile
    pytest
    requests_mock
    pytest-catchlog


[options.extras_require]
docs =
    astropy
    sphinx
    sphinx-automodapi

tests =
    pytest

[build-system]
requires = ["cython"]

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
pep8ignore = E501 W391

[flake8]
exclude = cextern
select = E101 W191 W291 W292 W293 W391 E11 E502 E722 E901 E902

 
