[metadata]
package_name = hstaxe
description = Spectral extraction tools for Hubble Space Telescope Grisms
long_description = Spectral extraction tools for Hubble Space Telescope Grisms ala aXe
author = hstaxe and aXe developers
license = 3-Clause BSD
url = https://github.com/spacetelescope/hstaxe

classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3(GPLv3)
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires >=3.7
setup_requires =
    setuptools_scm
    setuptools
packages =
    hstaxe
install_requires =
    numpy
    astropy
    stwcs
    stsci.imagestats
    drizzlepac
    drizzle
tests_require =
    backports.tempfile
    pytest
    requests_mock
    pytest-catchlog


[options.extras_require]
docs =
    sphinx
    sphinx-automodapi
    sphinx_rtd_theme

tests =
    pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
pep8ignore = E501 W391

[flake8]
exclude = cextern
select = E101 W191 W291 W292 W293 W391 E11 E502 E722 E901 E902


