[metadata]
name = hstaxe
description = Spectral extraction tools for Hubble Space Telescope Grisms
long_description_content_type = text/markdown
author = hstaxe and aXe developers
author_email = help@stsci.edu
license = GPLv3
license_files = LICENSE.txt
url = https://github.com/spacetelescope/hstaxe
github_project = spacetelescope/hstaxe
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires >=3.7
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
    numpy
    astropy
    stwcs
    stsci.imagestats
    drizzlepac
    drizzle

[options.extras_require]
test =
    backports.tempfile
    pytest
    requests_mock
    pytest-catchlog
docs =
    sphinx
    sphinx-automodapi
    sphinx-rtd-theme
    stsci-rtd-theme

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
pep8ignore = E501 W391

[flake8]
exclude = cextern
select = E101 W191 W291 W292 W293 W391 E11 E502 E722 E901 E902
